# bulkice_doumeki

./: .gitignore  README.md
analysis/files/output_geant4/background/mDOM/: Na22.csv  Pa234.csv  Pa234m.csv  Th234.csv  U234.csv  U238.csv
analysis/scripts/: plot_background.ipynb  plot_gamma.ipynb  plot_input.ipynb  plot_signal.ipynb  plot_sn_energy_spectrum.ipynb
analysis/tests/: combineNfilter.py  darknoise_generator.py  data_formater.py  debug_background.ipynb  debug_biasing.ipynb  helper.py  plthelper.py  pmt_locator.py  test_abslength.ipynb  test_bkg.ipynb  test_decay.ipynb  test_exp_decay.ipynb  test_volume.ipynb  verification_U238.ipynb
data/Materials/: RiAbs_Photocathode.dat.mod
data/PMTs/: .pmt_Hamamatsu_R15458.dat.swp
mdom/: 100run_pos.mac  CMakeLists.txt  bulkice_doumeki.cc  env.sh  gmon.out  plot_test.ipynb  ray_trace.mac  run_pos.mac  vis.mac
mdom/InputFile/: Absorption_WLS.txt  Emission_WLS.txt  K40DecayChain.txt  TA0001_HamamatsuQE.data  Th232DecayChain.txt  U235DecayChain.txt  U238DecayChain.txt  U238DecayChain_copy.txt  VAS_Scintillation_Spectrum.data  vis_corrected.txt
mdom/InputFile/Electron/: e20002nkibd_ax.data  e20002nkibd_ay.data  e20002nkibd_az.data  e20002nkibd_energy.data  e20002nkibd_time.data  e20002nkibd_x.data  e20002nkibd_y.data  e20002nkibd_z.data
mdom/InputFile/Gamma/: gamma_ax.data  gamma_az.data
mdom/InputFile/Neutron/: neu20002nkibd_ax.data  neu20002nkibd_ay.data  neu20002nkibd_az.data  neu20002nkibd_energy.data  neu20002nkibd_time.data  neu20002nkibd_x.data  neu20002nkibd_y.data  neu20002nkibd_z.data
mdom/InputFile/Positron/: pos20002nkibd_ax.data  pos20002nkibd_ay.data  pos20002nkibd_az.data  pos20002nkibd_energy.data  pos20002nkibd_time.data  pos20002nkibd_x.data  pos20002nkibd_y.data  pos20002nkibd_z.data
mdom/analysis/scripts/: plot_background.ipynb  plot_signal.ipynb  plthelper.py
mdom/include/: G4OpWLS3.hh  Interpolation.hh  OMSimAnalysisManager.hh  OMSimDEGG.hh  OMSimDEGGHarness.hh  OMSimDataFileTypes.hh  OMSimDecayChainAction.hh  OMSimDetectorConstruction.hh  OMSimElectronAction.hh  OMSimGammaAction.hh  OMSimInputData.hh  OMSimInputData.hh.orig  OMSimK40Action.hh  OMSimLOM16.hh  OMSimLOM18.hh  OMSimLogger.hh  OMSimMDOM.hh  OMSimMDOM.hh.orig  OMSimNeutrinoAction.hh  OMSimNeutronAction.hh  OMSimPDOM.hh  OMSimPMTConstruction.hh  OMSimPMTConstruction.hh.orig  OMSimPMTQE.hh  OMSimPMTResponse.hh  OMSimParticleSetup.hh  OMSimPhotonAction.hh  OMSimPhysicsList.hh  OMSimPositronAction.hh  OMSimPositronInjector.hh  OMSimPrimaryGeneratorAction.hh  OMSimRadioactivityData.hh  OMSimRunManager.hh  OMSimScintillation.hh  OMSimSteppingAction.hh  OMSimTh232Action.hh  OMSimTrackingAction.hh  OMSimU235Action.hh  OMSimU238Action.hh  OMSimUtils.hh  (+7 more)
mdom/src/: .OMSimPhysicsList.cc.swp  G4OpWLS3.cc  Interpolation.cc  OMSimAnalysisManager.cc  OMSimAnalysisManager.cc.orig  OMSimDEGG.cc  OMSimDEGGHarness.cc  OMSimDataFileTypes.cc  OMSimDataFileTypes.cc.orig  OMSimDecayChainAction.cc  OMSimDetectorConstruction.cc  OMSimElectronAction.cc  OMSimGammaAction.cc  OMSimInputData.cc  OMSimInputData.cc.orig  OMSimK40Action.cc  OMSimLOM16.cc  OMSimLOM18.cc  OMSimMDOM.cc  OMSimMDOM.cc.orig  OMSimNeutrinoAction.cc  OMSimNeutronAction.cc  OMSimPDOM.cc  OMSimPMTConstruction.cc  OMSimPMTQE.cc  OMSimPMTResponse.cc  OMSimParticleSetup.cc  OMSimPhotonAction.cc  OMSimPhysicsList.cc  OMSimPositronAction.cc  OMSimPositronInjector.cc  OMSimPrimaryGeneratorAction.cc  OMSimRadioactivityData.cc  OMSimRunAction.cc  OMSimRunManager.cc  OMSimScintillation.cc  OMSimSteppingAction.cc  OMSimTh232Action.cc  OMSimTrackingAction.cc  OMSimTrackingAction.cc.orig  (+9 more)
mdom/src/bits/: stdc++.h
merger/: Event.py  NUANCEReader.py  WritePrimaries.py  all.sh  config.yaml  eff_vol_weighting.ipynb  enees.sh  g4tools.py  gmon.out  ibd.sh  lightcurve_generator.py  merge.py  radioactivity.sh  stools.py  test2.kin
